--- a/template/package.json
+++ b/template/package.json
@@ -43,6 +43,7 @@
     "vue-loader": "^13.0.5",
     "vue-template-compiler": "^2.4.4",
     "webpack": "^3.12.0",
+    "webpack-bundle-analyzer": "^2.13.1",
     "webpack-dev-server": "^2.11.2"
   }
 }
