--- a/template/package.json
+++ b/template/package.json
@@ -26,6 +26,7 @@
     "cross-env": "^5.1.6",
     "css-loader": "^0.28.7",
     "url-loader": "^1.0.1",
+    "address": "^1.0.3",
     {{#less}}
     "less": "^3.0.4",
     "less-loader": "^4.1.0",
@@ -33,12 +34,9 @@
     {{#htmlwebpackPlugin}}
     "html-webpack-plugin": "^3.2.0",
     {{/htmlwebpackPlugin}}
-    {{#if_or redirected source}}
+    {{#source}}
     "fs": "0.0.1-security",
-    {{/if_or}}
-    {{#redirected}}
-    "jsdom": "^11.9.0",
-    {{/redirected}}
+    {{/source}}
     "vue-loader": "^13.0.5",
     "vue-template-compiler": "^2.4.4",
     "webpack": "^3.12.0",
