--- a/template/package.json
+++ b/template/package.json
@@ -6,10 +6,11 @@
   "license": "{{ license }}",
   "private": true,
   "scripts": {
-    "dev": "cross-env NODE_ENV=development webpack-dev-server --open --hot",
+    "dev": "cross-env NODE_ENV=development webpack-dev-server --open",
     "build": "cross-env NODE_ENV=production webpack --progress --hide-modules"
   },
   "dependencies": {
+    "es6-promise": "^4.2.4",
     "vue": "^2.5.11"
   },
   "browserslist": [
@@ -22,7 +23,6 @@
     "babel-loader": "^7.1.2",
     "babel-preset-env": "^1.6.0",
     "babel-preset-stage-3": "^6.24.1",
-    "es6-promise": "^4.2.4",
     "cross-env": "^5.1.6",
     "css-loader": "^0.28.7",
     "url-loader": "^1.0.1",
