--- a/template/package.json
+++ b/template/package.json
@@ -26,6 +26,7 @@
     "cross-env": "^5.1.6",
     "css-loader": "^0.28.7",
     "url-loader": "^1.0.1",
+    "file-loader": "^1.1.11",
     "address": "^1.0.3",
     {{#less}}
     "less": "^3.0.4",
