--- a/template/package.json
+++ b/template/package.json
@@ -36,6 +36,7 @@
     "html-webpack-plugin": "^3.2.0",
     {{/htmlwebpackPlugin}}
     {{#source}}
+    "shelljs": "^0.8.3",
     "fs": "0.0.1-security",
     {{/source}}
     "vue-loader": "^13.0.5",
